{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 13,
  "lineage": "f9031ce9-dee9-146a-3b71-6d2aa9963fbd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:internet-gateway/igw-0f67414e2a05bac51",
            "id": "igw-0f67414e2a05bac51",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-0c7153a2e4e150251",
            "id": "rtb-0c7153a2e4e150251",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f67414e2a05bac51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypubroute"
            },
            "tags_all": {
              "Name": "mypubroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-0c7153a2e4e150251",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-00d2621257b26848c",
            "id": "rtb-00d2621257b26848c",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "mypvtroute"
            },
            "tags_all": {
              "Name": "mypvtroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-00d2621257b26848c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37f6b0bcc489ece",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7153a2e4e150251",
            "subnet_id": "subnet-078510487bde10a25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4e44842809a931",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7153a2e4e150251",
            "subnet_id": "subnet-00dba5aeaf81446a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05245880ede654c3f",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d2621257b26848c",
            "subnet_id": "subnet-0676395c0f085b2d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0818bf072e1e42691",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d2621257b26848c",
            "subnet_id": "subnet-01e847161767b72b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-078510487bde10a25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078510487bde10a25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devpubsub1"
            },
            "tags_all": {
              "Name": "devpubsub1"
            },
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-078510487bde10a25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-00dba5aeaf81446a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dba5aeaf81446a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devpubsub2"
            },
            "tags_all": {
              "Name": "devpubsub2"
            },
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-00dba5aeaf81446a4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-0676395c0f085b2d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676395c0f085b2d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devpvtsub1"
            },
            "tags_all": {
              "Name": "devpvtsub1"
            },
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-0676395c0f085b2d6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-01e847161767b72b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e847161767b72b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devpvtsub2"
            },
            "tags_all": {
              "Name": "devpvtsub2"
            },
            "vpc_id": "vpc-0af872e8abd39f2e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-01e847161767b72b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:vpc/vpc-0af872e8abd39f2e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0837b33fbb8cd3c48",
            "default_route_table_id": "rtb-011dfecadaa66e1b6",
            "default_security_group_id": "sg-005e5ca8959ac743f",
            "dhcp_options_id": "dopt-02863d9383cfda150",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af872e8abd39f2e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011dfecadaa66e1b6",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "tags": {
              "Name": "devmyvpc"
            },
            "tags_all": {
              "Name": "devmyvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "vpc-0af872e8abd39f2e8",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}